<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:background="@color/page_background"
	android:orientation="vertical"
	android:padding="15dp" >	    	    
	<TextView
		android:id="@+id/register_bank_notice"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:text="@string/member_register_bank_notice"
	    android:textSize="14sp"
        android:paddingTop="15dp"/>	    

	<EditText
		android:id="@+id/register_dibit_card"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:paddingLeft="10dp"
		android:textSize="16sp"
		android:background="@drawable/input_white"
		android:hint="@string/member_hint_debit"
		android:singleLine="true" />  
    
	<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register_bank_arrow"
            android:background="@drawable/input_white"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop= "10dp"
	        android:textSize="16sp"
	        android:gravity="center_vertical|right"
	        android:layout_alignParentRight="true"
	        android:drawableRight="@drawable/right_arrow" />
	    <TextView
		    android:id="@+id/register_bank"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:paddingLeft="10dp"
		    android:hint="@string/member_hint_bank"
		    android:textSize="16sp"
	        android:paddingTop="15dp"
		    android:singleLine="true" />
	</RelativeLayout>

	<EditText
	    android:id="@+id/register_cardholder"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:textSize="16sp"
	    android:background="@drawable/input_white"
	    android:hint="@string/member_hint_cardholder"
	    android:singleLine="true" />     
	<EditText
	    android:id="@+id/register_reserved_phone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:paddingLeft="10dp"
	    android:textSize="16sp"
	    android:background="@drawable/input_white"
	    android:hint="@string/member_hint_reserved_phone"
	    android:singleLine="true" />   
	    
	<Button
	    android:id="@+id/register_finished"
	    style="@style/btn_orange"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:text="@string/member_finished" />

</LinearLayout>
