<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/page_background"
	    android:orientation="vertical"
	    android:padding="15dp" >	    	    
	    
	   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		    <EditText
		        android:id="@+id/reset_password_code"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:paddingLeft="10dp"
		        android:background="@drawable/input_white"
		        android:hint="@string/member_hint_code"
		        android:singleLine="true" />  
		    <Button
	            android:id="@+id/get_code"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="15dp"
	            android:background="@drawable/btn_white"
	            android:minHeight="0dp"
	            android:text="@string/member_captcha"
	            android:textColor="@color/red"
	            android:textSize="14sp" />
	    </RelativeLayout>

	    <EditText
	        android:id="@+id/new_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="10dp"
	        android:background="@drawable/input_white"
	        android:hint="@string/member_hint_setPassword"
	        android:inputType="textPassword"
	        android:singleLine="true" />   
	    <EditText
	        android:id="@+id/confirm_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:paddingLeft="10dp"
	        android:background="@drawable/input_white"
	        android:hint="@string/member_hint_rePassword"
	        android:inputType="textPassword"
	        android:singleLine="true" />



	    
	    
	    <Button
	        android:id="@+id/reset_password_finish"
	        style="@style/btn_orange"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/member_finished" />
	</LinearLayout>