<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical"
    android:padding="15dp" >

    <EditText
        android:id="@+id/password_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/input_white"
        android:hint="@string/member_hint_password_current"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/input_white"
        android:hint="@string/member_hint_password_new"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/input_white"
        android:hint="@string/member_hint_password_confirm"
        android:inputType="textPassword"
        android:singleLine="true" />

	    
	    <Button
	        android:id="@+id/member_finish"
	        style="@style/btn_orange"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:text="@string/member_finished" />



</LinearLayout>
