<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:text="@string/dialog_message_logout"
        android:textSize="17sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/page_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:text="@string/dialog_cancel"
            android:textSize="17sp"
            android:textStyle="normal" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/page_background" />

        <Button
            android:id="@+id/dialog_btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:text="@string/dialog_submit"
            android:textSize="17sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>